--- a/css/cards.css
+++ b/css/cards.css
@@ -1,13 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans";
-}
-
-body {
-  background-color: #555;
-}
 
 .content-wrapper {
   margin: 0 auto;
@@ -17,6 +7,17 @@ body {
   justify-content: center;
   padding: 0.5rem;
 }
+
+#content-wrapper {
+  margin: 0 auto;
+  max-width: 1200px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
+
 
 .news-card {
   border: 0px solid aqua;
