--- a/css/nabvar.css
+++ b/css/nabvar.css
@@ -1,30 +1,12 @@
-.header {
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 20px 50px;
-    background-color: #0b0b11;
-    transition: 0.3s;
-    z-index: 2;
-}
-
-.header.sticky {
-    padding-block: 10px;
-    box-shadow: inset 0 -1.5px 3px rgba(255, 255, 255, 0.3);
-}
-
-.logo {
-    font-size: 30px;
-    font-weight: 700;
-    cursor: pointer;
-    color: #fff; /* Asegúrate de que el logo sea visible */
+.navbar {
+    z-index: 11;
 }
 
 nav {
     display: flex;
     align-items: center;
+    z-index: 11;
+    position: fixed;
 }
 
 nav ul {
@@ -42,9 +24,10 @@ nav ul li {
     transition: 0.3s;
 }
 
-nav ul li:hover {
+nav ul li:hover a:hover {
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
+    color: #fff;
 }
 
 nav ul li a {
@@ -53,52 +36,13 @@ nav ul li a {
     letter-spacing: 1px;
 }
 
-a:hover {
-    color: rgba(6, 190, 244, 0.75);
-}
-
-/* Toggle button styles */
-.navbar-toggler {
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: flex; /* Use flex to align icons */
-    flex-direction: column; /* Stack icons */
-}
-
-.navbar-toggler-icon {
-    font-size: 25px;
+.collapse {
+    z-index: 13;
 }
 
 /* Responsive adjustments */
 @media (max-width: 900px) {
-    .header {
-        padding: 15px 20px; /* Less padding on smaller screens */
-    }
-    
-    nav ul {
-        display: none; /* Hide the menu initially */
-        flex-direction: column; /* Change to vertical layout */
-        position: absolute; /* Position for dropdown */
-        right: 0; /* Align to the right */
-        background-color: #0b0b11; /* Match background */
-        z-index: 1; /* Ensure it stays on top */
-        width: 200px; /* Set a width for dropdown */
-    }
-    
-    nav ul.active {
-        display: flex; /* Show the menu when active */
-    }
-
-    nav div.bar {
-        display: block; /* Show the menu button */
-    }
-}
-
-@media (max-width: 650px) {
-    nav ul li {
-        margin: 0 2px; /* Further reduce margin */
-    }
+   
     .logo {
         font-size: 24px; /* Smaller logo size */
     }
@@ -108,7 +52,7 @@ a:hover {
     .logo {
         font-size: 20px; /* Adjust logo for very small screens */
     }
-    nav ul li {
-        padding: 0 5px; /* Less padding for items */
-    }
+    
 }
+
+
