--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     scroll-behavior: smooth;
 }
 body{
-    background-color: #25252a;
+    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
     font-family: 'Ubuntu', sans-serif;
     width: 100%;
     min-height: 100vh;
