--- a/css/cards-journalist.css
+++ b/css/cards-journalist.css
@@ -42,7 +42,7 @@
 }
 
 .card:hover .cover:after {
-    background-color: black;
+    background-color: #11111e;
 }
 
 .card:hover .cover h1 {
@@ -138,7 +138,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #0b0f08;
+    background-color: #11111e;  
     transform-style: preserve-3d;
     transition: ease all 2.3s;
     transform: translateZ(-1px);
@@ -159,9 +159,10 @@
     padding: 14px 32px;
     outline: none;
     text-decoration: none;
+    
 }
 
 .card-back a:hover {
     background-color: rgb(255, 255, 255);
-    color: #0b0f08;
+    background-color: #11111e;
 }
