--- a/css/footer.css
+++ b/css/footer.css
@@ -1,32 +1,50 @@
-.footer{
+.footer {
     width: 100%;
     padding: 50px 50px 0px;
     background-color: #11111e;
     min-height: 200px;
     margin-top: 0;
-
 }
-.footer .box{
+
+.footer .box {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-around;
 }
-.footer .box .left{
+
+/* Schedule-specific styles for the footer */
+.footer .schedules-ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer .schedules-li {
+    color: #aaa;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+/* Left section styles */
+.footer .box .left {
     display: flex;
     justify-content: space-around;
     padding-right: 20px;
 }
+
 .footer .box .left .categories > p {
     font-size: 28px;
     margin-bottom: 30px;
 }
-.footer .box .left .categories div{
+
+.footer .box .left .categories div {
     margin-bottom: 15px;
     width: max-content;
 }
-.footer .box .left .categories div p{
+
+.footer .box .left .categories div p {
     font-size: 20px;
     color: #ddd;
     cursor: pointer;
@@ -35,46 +53,58 @@
     border-right: 1px solid #fff0;
     transition: 0.3s;
 }
-.footer .box .left .categories div p:hover{
+
+.footer .box .left .categories div p:hover {
     color: #fff;
     border-left: 1px solid #fff;
     border-right: 1px solid #fff;
 }
-.footer .contact{
+
+/* Contact and other sections in footer */
+.footer .contact {
     margin-left: 10px;
 }
-.footer .contact p{
+
+.footer .contact p {
     font-size: 28px;
     margin-bottom: 30px;
 }
-.footer .contact div{
+
+.footer .contact div {
     font-size: 17px;
     margin-bottom: 15px;
     color: #aaa;
 }
-.footer .icon{
+
+.footer .icon {
     margin-top: 20px;
     padding: 20px;
 }
-.footer .icon i{
+
+.footer .icon i {
     font-size: 25px;
     margin-right: 20px;
     color: #aaa;
     cursor: pointer;
     transition: 0.3s;
 }
-.footer .icon i:hover{
+
+.footer .icon i:hover {
     color: #fff;
     transform: scale(1.2);
 }
-.footer .newsletter p{
+
+/* Newsletter styles */
+.footer .newsletter p {
     font-size: 28px;
     margin-bottom: 30px;
 }
-.footer .newsletter .email{
+
+.footer .newsletter .email {
     display: flex;
 }
-.footer .newsletter .email input{
+
+.footer .newsletter .email input {
     width: 400px;
     padding: 12px 25px;
     border-radius: 5px;
@@ -83,7 +113,8 @@
     font-size: 16px;
     margin-right: 20px;
 }
-.footer .newsletter .email button{
+
+.footer .newsletter .email button {
     padding: 10px 25px;
     font-size: 16px;
     font-weight: 600;
@@ -95,179 +126,62 @@
     cursor: pointer;
     transition: 0.3s;
 }
-.footer .newsletter .email button:hover{
+
+.footer .newsletter .email button:hover {
     color: #0a0a18;
     background-color: #fff;
 }
-.footer .copyrights{
+
+.footer .copyrights {
     font-size: 18px;
     text-align: center;
     padding: 20px;
     letter-spacing: 1px;
 }
 
-@media (max-width:1024px) {
-    .topHeadlines .right .topNews .news .img {
-        width: 150px;
-    }
-    .topHeadlines .right .topNews .news .text .title a p {
-        font-size: 14px;
-    }
-    .page2 .news .newsBox .newsCard .img {
-        height: 120px;
-    }
-    .page2 .news .newsBox .newsCard .text {
-        padding: 5px;
-    }
-    .page2 .news .newsBox .newsCard .text .title a p {
-        font-size: 14px;
-    }
-    .footer .box .left .categories > p {
-        font-size: 25px;
-    }
-    .footer .contact p {
-        font-size: 25px;
-    }
+/* Media queries */
+@media (max-width: 1024px) {
+    /* Reduced font size for better fit */
+    .footer .box .left .categories > p,
+    .footer .contact p,
     .footer .newsletter p {
         font-size: 25px;
     }
+
     .footer .newsletter .email input {
         width: 300px;
     }
+
     .footer .newsletter .email button {
         padding: 10px 20px;
         font-size: 14px;
     }
+
     .footer .box .left .categories div p {
         font-size: 18px;
     }
+
     .footer .contact div {
         font-size: 15px;
     }
 }
-@media (max-width:768px) {
-    nav div.bar{
-        display: block;
-    }
-    nav ul {
-        opacity: 0;
-        position: absolute;
-        background-color: #0b0b11;
-        flex-direction: column;
-        right: 0px;
-        padding: 30px 30px 10px;
-        text-align: center;
-        pointer-events: none;
-        border-radius: 10px;
-    }
-    nav ul.activeMenu {
-        opacity: 1;
-        pointer-events: all;
-    }
-    nav ul li{
-        margin: 10px 0;
-    }
-    .topHeadlines {
-        display: block;
-    }
-    .topHeadlines .right .topNews .news .img {
-        width: 220px;
-    }
-    .topHeadlines .right .topNews .news .text .title a p {
-        font-size: 18px;
-    }
-    .page2 .news .newsBox .newsCard {
-        width: calc(100% / 3 - 20px);
-    }
+
+@media (max-width: 768px) {
     .footer .box {
         grid-template-columns: none;
     }
-    .footer .box .right{
-        grid-row-start: 1;
-        margin-bottom: 40px;
-    }
-    .footer .newsletter .email input {
-        width: 400px;
-    }
+
     .footer .box .left {
         justify-content: space-between;
     }
 }
-@media (max-width:600px) {
-    .logo {
-        font-size: 35px;
-    }
-    .topHeadlines .left {
-        padding: 10px 0px;
-    }
-    .topHeadlines .right .topNews .news .img {
-        width: 150px;
-    }
-    .topHeadlines .right .topNews .news .text .title a p {
-        font-size: 14px;
-    }
-    .page2 .news .newsBox .newsCard {
-        width: calc(100% / 2 - 20px);
-    }
-    .footer .newsletter .email input {
-        width: 300px;
-        font-size: 14px;
-    }
-    .footer .newsletter .email button {
-        padding: 8px 15px;
-        font-size: 14px;
-    }
-    .footer .newsletter p {
-        font-size: 22px;
-    }
-    .footer .box .left .categories > p {
-        font-size: 22px;
-    }
-    .footer .contact p {
-        font-size: 22px;
-    }
-    .footer .copyrights {
-        font-size: 14px;
-    }
-}
-@media (max-width:425px) {
-    nav div.bar {
-        right: 50px;
-    }
-    nav ul {
-        padding: 30px 10px 10px;
-    }
-    nav ul li {
-        margin: 5px 0px;
-    }
-    nav ul li a {
-        font-size: 14px;
-    }
-    .topHeadlines {
-        padding: 100px 20px 50px;
-    }
-    .page2 {
-        padding: 50px 20px;
-    }
-    .page2 .news .newsBox .newsCard {
-        width: 100%;
-        display: grid;
-    }
-    .page2 .news > .title h2 {
-        font-size: 30px;
-    }
-    .page2 .news .newsBox .newsCard .img{
-        height: 100%;
-        min-height: 150px;
-    }
-    .page2 .news .newsBox .newsCard .text .title a p {
-        font-size: 16px;
-    }
+
+@media (max-width: 425px) {
     .footer .newsletter .email {
         display: block;
     }
+
     .footer .newsletter .email button {
         margin-top: 15px;
     }
-    
 }
