add the social buttons and expand the text in the news

--- a/css/time-line.css
+++ b/css/time-line.css
@@ -25,7 +25,7 @@ figure {
 #tribute-info,
 figcaption,
 p {
-    color: #fbfbfb;
+    color: #536f79;
 }
 
 ul li {
@@ -41,7 +41,7 @@ ul li {
 }
 
 .year {
-    color: #235d9f;
+    color: #7bc0de;
     font-size: 120%;
     margin-top: 40%;
 }
