--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -10,7 +10,7 @@
   font-family: 'Plus Jakarta Sans', sans-serif;
   padding-top: 5%;
   padding-bottom: 5%;
-  color:#0056b3;
+  color: cadetblue;
 }
 
 .contact-content {
@@ -77,7 +77,7 @@ textarea {
 .submit-btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: cadetblue;
   color: #fff;
   font-size: 1em;
   border: none;
