--- a/css/subcription.css
+++ b/css/subcription.css
@@ -45,6 +45,7 @@
 
 @media (min-width: 390px) {
     .thank-you-container {
-        margin-left: 3%;
+        margin-left: 9%;
+        margin-bottom: 5%;
     }
   }
