--- a/css/slides-card.css
+++ b/css/slides-card.css
@@ -30,7 +30,7 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.6);
-  color: white;
+  color: rgb(251, 251, 251);
   padding: 10px;
   text-align: center;
   font-size: 1.2rem;
@@ -62,6 +62,10 @@
 
 .headline-overlay:hover {
   background: rgba(0, 0, 0, 0.8);
+}
+
+.owl-nav {
+  display: none; /*this eliminate the next buttoms in the slides cards*/
 }
 
 /* Click Effects */
