--- a/css/nabvar.css
+++ b/css/nabvar.css
@@ -53,10 +53,15 @@ nav ul li a {
     nav ul li {
         margin: 10px 0;
     }
+    
 }
 
 @media (max-width: 450px) {
     .logo {
         font-size: 20px;
+    }
+
+    .nav-link {
+        background-color: rgb(42, 44, 67);
     }
 }
