--- a/css/the-news.css
+++ b/css/the-news.css
@@ -1,3 +1,5 @@
+/*the news is the css of */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -20,6 +22,25 @@ main {
     padding: 20px;
     max-width: 800px;
 }
+
+@media (max-width: 768px) {
+    .title-news {
+        margin-top: 10%;
+    }
+}
+
+@media (max-width: 820px) {
+    .title-news {
+        margin-top: 12%;
+    }
+}
+
+@media (max-width: 1024px) {
+    .title-news {
+        margin-top: 12%;
+    }
+}
+
 
 img {
     display: flex;
