--- a/css/cards-journalist.css
+++ b/css/cards-journalist.css
@@ -123,3 +123,50 @@
     line-height: 1.4;
     color: #ddd;
 }
+
+@media (max-width: 1024px) {
+    .row {
+        gap: 10px;
+    }
+
+    .cover img.journalist-photo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .card {
+        width: 120%;
+        height: 70%;
+
+    }
+
+    .cover h1 {
+        font-size: 30px;
+        margin-right: 13%;
+    }
+  }
+  
+  @media (max-width: 768px) {
+   
+  }
+  
+  @media (max-width: 390px) {
+    .row {
+        gap: -60px;
+    }
+    
+    .cover img.journalist-photo {
+        width: 150px;
+        height: 150px;
+    }
+
+    .card {
+        width: 120%;
+        height: 70%;
+    }
+
+    .cover h1 {
+        font-size: 30px;
+        margin-right: 3%;
+     }
+  }
