--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -90,6 +90,13 @@ textarea {
   background-color: #0056b3;
 }
 
+@media (max-width: 1024px) {
+  .contact-content {
+      grid-template-columns: 1fr;
+      margin-top: 90px;
+  }
+}
+
 @media (max-width: 768px) {
   .contact-content {
       grid-template-columns: 1fr;
