--- a/css/cards.css
+++ b/css/cards.css
@@ -129,6 +129,16 @@
   color: yellow;
 }
 
+/*responsive*/
+
+@media (max-width: 820px) {
+  .news {
+    margin-top: 45%;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
+}
+
 @media (min-width: 768px) {
   .news-title {
     margin-top: 15%;
