--- a/css/header.css
+++ b/css/header.css
@@ -181,7 +181,7 @@ button:hover {
   color: rgba(255, 255, 255, 0.9);
 }
 
-/* Responsiveness */
+/* Responsive */
 @media (max-width: 1024px) {
   .content .title {
     font-size: 0.8rem;
@@ -230,6 +230,37 @@ button:hover {
     width: calc(33.33% - 10px);
     height: calc((33.33% - 10px) * 1.5);
     margin: 5px;
+  }
+}
+
+@media (max-width: 820px) {
+  .content .title {
+    font-size: 0.8rem;
+  }
+  .content .description {
+    font-size: 0.65rem;
+  }
+  button {
+    font-size: 0.7rem;
+  }
+  .item {
+    width: calc(100% - 10px);
+    height: auto;
+    margin: 5px;
+    animation: none !important; /* Stop animations */
+    transition: none !important; /* Stop transitions */
+  }
+
+  .item::after {
+    box-shadow: none; /* Remove any animation-like effects */
+  }
+
+  .content {
+    display: flex;
+    opacity: 1;
+    filter: none;
+    transform: translateY(0);
+    animation: none !important;
   }
 }
 
