--- a/css/cards.css
+++ b/css/cards.css
@@ -1,5 +1,14 @@
+.news {
+  
+  margin-top: -10%;
+}
 .news-title {
   margin-top: 10%;
+  text-decoration: underline; 
+  color: white; 
+  margin-left: 30%;
+  margin-bottom: 20px; 
+  font-size: 50px;
 }
 
 .content-wrapper {
@@ -132,17 +141,14 @@
 /*responsive*/
 
 @media (max-width: 820px) {
-  .news {
-    margin-top: 45%;
-    margin-left: 30%;
-    margin-right: 30%;
+  #politics {
+   margin-top: 20%;
   }
 }
 
 @media (min-width: 768px) {
-  .news-title {
-    margin-top: 15%;
-    margin-right: 30%;
+  .news-card {
+    height: 15rem; 
   }
 }
 
@@ -150,6 +156,20 @@
   .news-title {
     margin-top: 35%;
     margin-right: 30%;
+  }
+}
+
+@media (max-width: 360px) {
+  .news-title {
+    font-size: 30px;
+    margin-left: -50%;
+  }
+}
+
+@media (max-width: 412px) {
+  .news-title {
+    font-size: 30px;
+    margin-left: -50%;
   }
 }
 
