--- a/css/cards-journalist.css
+++ b/css/cards-journalist.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 0px;
     margin-bottom: 5%;
-    margin-top: 3%;
+    margin-top: -50px;
 }
 
 /* Card container */
@@ -24,7 +24,7 @@
     position: relative;
     transform-style: preserve-3d;
     transition: transform 0.6s ease;
-    color: #bfc9cd;
+    color: #273338; /* Darker text */
     background-color: #bfc9cd;
 }
 
@@ -59,7 +59,7 @@
     transform: translate(10%,-10%);
     text-transform: uppercase;
     font-family: verdana;
-    font-size: 1,2em;
+    font-size: 1.2em;
     font-weight: 700;
     margin-bottom: 10px;
     color: #bfc9cd;
