--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+/* Firefox scrollbar styling */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #999 transparent;
 }
+
 body{
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
     font-family: 'Ubuntu', sans-serif;
