--- a/css/nabvar.css
+++ b/css/nabvar.css
@@ -58,7 +58,7 @@ nav ul li a {
 
 @media (max-width: 450px) {
     .logo {
-        font-size: 20px;
+        font-size: 25x;
     }
 
     .nav-link {
